Resolves: tdf#103701 bulk-broadcast the correct hint ID for formula groups

BulkBroadcastGroupAreas() and BulkDataHint and thus
FormulaGroupAreaListener::Notify() omitted to transport the actual hint
and assumed SC_HINT_DATACHANGED, but SC_HINT_TABLEOPDIRTY needs to be
handled as well.

Change-Id: I765f7c95f7aeab295f35dcf6949a3b1926cbe248